feat: document API with the OpenAPI specification
* add Springdoc dependency
* exclude documentation endpoints from security
* enable csrf support in Springdoc
* add properties for project metadata
* enable property scanning in the project
* configure Swagger to display project metadata
* document existing endpoints
* update README.md with new links to the docs
* add configuration processor dependency to remove IntelliJ warning

--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,7 @@
 		<java.version>17</java.version>
 		<dummy4j.version>0.9.0</dummy4j.version>
 		<keycloak-adapter.version>16.1.1</keycloak-adapter.version>
+		<springdoc.version>1.6.6</springdoc.version>
 	</properties>
 
 	<dependencyManagement>
@@ -50,6 +51,14 @@
 		</dependency>
 		<!-- END of Security -->
 
+		<!-- Docs -->
+		<dependency>
+			<groupId>org.springdoc</groupId>
+			<artifactId>springdoc-openapi-ui</artifactId>
+			<version>${springdoc.version}</version>
+		</dependency>
+		<!-- END of Docs -->
+
 		<!-- Tests -->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
@@ -73,6 +82,13 @@
 			<groupId>dev.codesoapbox</groupId>
 			<artifactId>dummy4j</artifactId>
 			<version>${dummy4j.version}</version>
+		</dependency>
+		<!-- Dependency for removing IntelliJ warning -->
+		<!-- https://youtrack.jetbrains.com/issue/IDEA-225445 -->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-configuration-processor</artifactId>
+			<optional>true</optional>
 		</dependency>
 		<!-- END of Utilities -->
 	</dependencies>
