--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,9 @@
+swagger.project-title=@project.name@
+swagger.project-version=@project.version@
+swagger.project-description=@project.description@
+
+springdoc.swagger-ui.csrf.enabled=true
+
 keycloak.realm=keep-growing
 keycloak.resource=spring-boot-example-app
 keycloak.auth-server-url=http://127.0.0.1:8024/auth
